# server-reason-react

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .ocamlformat  .vercelignore  AGENTS.md  CHANGES.md  Dockerfile  Dockerfile.vercel  JS_STRING_REGEX_PERFORMANCE_STUDY.md  LICENSE.md  Makefile  PR_DESCRIPTION.md  README.md  REFERENCES.md  TODOS.md  bsconfig.json  dune  dune-project  dune-workspace  dune.mel  flake.nix  fly.toml  index.html  index.mld  js.opam  native-react.opam  package-lock.json  package.json  server-reason-react.opam  server-reason-react.opam.template  sherlodoc.js
bench/: dune  main.re  once.re
bench/results/: bench_static_markup_with_demo_app.csv  bench_static_markup_with_simple_app.csv
benchmark/: Makefile  README.md  allocation.ml  bench.ml  dune  main.re  once.ml
benchmark/app/: Link.js  PageContainer.js  Welcome.js  app.js
benchmark/bun-js/: index.js
benchmark/frameworks/: package-lock.json  package.json  render-bench.ts
benchmark/memory/: dune  memory_bench.ml
benchmark/micro/: dune  micro_bench.re
benchmark/native/: dune  server.re
benchmark/node-express-js/: index.js
benchmark/perf-work/: PERF_NEXT.md  README.md  alloc-table500.txt  alloc-wide500.txt  alloc_profile.ml  baseline-run1.txt  baseline-run2.txt  baseline-run3.txt  diff_styles.ml  dump_html.ml  dune  dune_extra  perf_profile.ml  perf_profile.sh  phase1-run1.txt  phase1-run2.txt  phase2-final.txt  phase2-run1.txt  phase2-run2.txt  phase3-run1.txt  phase3-run2.txt  phase3b-run1.txt  phase3b-run2.txt  phase3c-run1.txt  phase3c-run2.txt  phase4-final.txt  phase4-run1.txt  phase7-final.txt  phase8-baseline-run1.txt  phase8-baseline-run2.txt  phase8-run1.txt  phase8-run2.txt  style_alloc_bench.ml  unification_bench.ml  unified-experiment-runs.txt  unified-experiment.txt
benchmark/regex-study/: dune  regex_scaling.ml
benchmark/results/: .gitkeep
benchmark/runner/: package-lock.json  package.json  runner.mjs  visualize.html
benchmark/scenarios/: Blog.re  Cx.re  Dashboard.re  DeepTree.re  Ecommerce.re  Form.re  PropsHeavy.re  ShallowTree.re  SuspenseTree.re  Table.re  Trivial.re  WideTree.re  dune
benchmark/streaming/: dune  streaming_bench.ml
compare/srr-compare.4uYtTt/: Entry_native.re  dune  runner.js
compare/srr-compare.PRXgrC/: dune  js.output  native.output  node_modules  output.diff  runner.js
demo/: App.re  Client.re  Index.re  README.md  _dune  dune  package-lock.json  package.json  styles.css  tailwind.config.js
demo/.running/: .gitignore  built_at.txt
demo/browser/: index.js
demo/client/: .gitignore  ClientRouter.re  ComplexRouterRSC.re  CreateFromFetch.re  CreateFromReadableStream.re  DummyRouterRSC.re  Hydrate.re  HydrateRoot.re  NestedRouterRSC.re  ReactServerDOMEsbuild.js  ReactServerDOMEsbuild.re  ReactServerDOMWebpack.re  RenderRoot.re  Router.re  RouterRSC.re  RouterRSCNoSSR.re  ServerOnlyRSC.re  SinglePageRSC.re  StyleOrderHydrate.re  app.re  build.mjs  bundle.mjs  create-from-fetch.jsx  create-from-readable-stream.jsx  dune  error-boundary.jsx  header.re  index.re  package-lock.json  package.json  router.jsx  runtime-with-client.jsx  runtime-without-client.jsx  runtime.jsx  styles.css  tailwind.config.js  use.jsx
demo/dream-nested-router/: dune  test_router_rsc.ml
demo/dream-rsc/: DreamRSC.re  DreamRSC.rei  dune
demo/server/: ActionsRSC.re  App_rsc.re  DB.re  Date.re  Document.re  DreamRSC.re  Dream_rsc.re  Dummy.ml  Error.re  Esbuild.re  Example.re  Home.re  Index.re  Markdown.re  NoteItem.re  NoteList.re  Page.re  RouterRSC.re  ServerOnlyRSC.re  Server_only_rsc.re  SidebarNote.re  SinglePageRSC.re  Single_page_rsc.re  comments.re  dune  index.js  package-lock.json  package.json  server.re
demo/universal/: Align.re  Context.re  Header.re  Link.re  MelRaw.re  Root.re  Spacer.re  dune
documentation/: basic-usage.mld  browser_only.mld  browser_ppx.mld  dune  externals-melange-attributes.mld  get-started.mld  how-to-organise-universal-code.mld  index.mld  introduction.mdx  mint.json  ssr-and-hydration.mld  universal-code.mld
lib/: css.ml  domProps.ml  domProps.mli  dune  emotion.ml  hash.ml  html.ml  index.ml  main.ml  react.ml  react.mli  reactDOM.ml  reactDOM.mli  reactDOMStyle.ml  reactDOMStyle.mli  reactDOM_.ml  reactDom.ml  reactDomStyle.ml  reactEvent.ml  reasonReactRouter.ml
lib/belt/: LICENSE.md  belt_Array.ml  belt_HashMapInt.ml  belt_List.ml  belt_Map.ml  belt_MapDict.ml  belt_MapInt.ml  belt_MutableQueue.ml  belt_MutableSet.ml  belt_MutableSetInt.ml  belt_MutableSetString.ml  belt_MutableStack.ml  belt_SortArrayString.ml  belt_internalAVLset.ml  belt_internalAVLtree.ml  belt_internalBuckets.ml  dune  js.ml  js_math.ml  test.ml
lib/bs_css/: dune
lib/css/: Properties.re  autoprefixer.ml  converter.re  copy_auto.js  css.ml  dune  hash.ml  properties.re  rule.re  values.re
lib/html/: dune
lib/intf_of_sign/: _dune  dune  intf_of_sign.ml
lib/js/: LICENSE.md  dune  js.ml  js.mli  js_console.ml  js_exn.ml  js_null.ml  js_null_undefined.ml  js_undefined.ml  test.ml  types.ml
lib/melange-js/: js.mli  test.ml
lib/ppx/: double_hash.ml  dune  pipe_first.ml
lib/react/: domProps.ml  domProps.mli  dune  react.ml  react.mli
lib/reactDom/: dune  props.ml  reactDOM.ml  reactDOM.mli  reactDOMStyle.ml  reactDOMStyle.mli
lib/reasonReactRouter/: dune  reasonReactRouter.mli
lib/shims/: dune  fetch.ml  js.ml  promise.ml  promise.re  shims.ml  webapi.ml
lib/test_utils/: dune
lib/web/: dom.mli  dune  webapi.ml  webapi.mli
lib/webapi/: Fetch.ml  Fetch__Iterator.ml  Webapi.re  Webapi__Base64.re  Webapi__Canvas__Canvas2d.re  Webapi__Dom__ClipboardEvent.re  Webapi__Dom__CssStyleDeclaration.re  Webapi__Dom__DocumentOrShadowRoot.re  Webapi__Dom__HtmlElement.re  Webapi__Dom__HtmlImageElement.re  Webapi__Dom__Image.re  Webapi__Dom__Location.re  Webapi__Dom__MutationRecord.re  Webapi__Dom__NamedNodeMap.re  Webapi__Dom__PageTransitionEvent.re  dom.ml  dune  (+10 more)
melange-demo/: .gitignore  LICENSE  dune-project  melange-demo.opam  melange-demo.opam.locked  package-lock.json  package.json
ppx/: dune  html.ml  html.mli  ppx.ml
(+3350 files in other folders)
