opam-version: "2.0"
version: "3234376"
synopsis: "Rendering React components on the server natively"
maintainer: ["David Sancho <dsnxmoreno@gmail.com>"]
authors: ["David Sancho <dsnxmoreno@gmail.com>"]
license: "MIT"
homepage: "https://github.com/ml-in-barcelona/server-reason-react"
bug-reports: "https://github.com/ml-in-barcelona/server-reason-react/issues"
depends: [
  "dune" {= "3.7.0"}
  "ocaml" {>= "4.14.0"}
  "ppxlib" {>= "0.23.0"}
  "reason" {= "3.8.1"}
  "alcotest" {with-test}
  "fmt" {with-test}
  "ocamlformat" {= "0.21.0" & with-test}
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
  "melange" {= "0.3.2"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ml-in-barcelona/server-reason-react.git"
