; Main benchmark dune file
; Legacy executables (keeping for compatibility)

(executable
 (name main)
 (modules main)
 (libraries
  base
  core
  unix
  core_unix
  core_unix.command_unix
  core_bench
  demo_shared_native
  server-reason-react.react
  server-reason-react.reactDom)
 (preprocess
  (pps server-reason-react.ppx)))

(executable
 (name once)
 (modules once)
 (libraries
  unix
  lwt
  lwt.unix
  server-reason-react.react
  server-reason-react.reactDom
  demo_shared_native)
 (preprocess
  (pps server-reason-react.ppx)))

(rule
 (alias bench)
 (action
  (with-stdout-to
   run.csv
   (run ./main.exe))))

(rule
 (alias bench-once)
 (action
  (run ./once.exe)))
