(executable
 (name bench)
 (modules bench)
 (libraries
  unix
  benchmark_scenarios
  server-reason-react.react
  server-reason-react.reactDom)
 (preprocess
  (pps server-reason-react.ppx)))

(executable
 (name allocation)
 (modules allocation)
 (libraries
  unix
  lwt
  lwt.unix
  server-reason-react.react
  server-reason-react.reactDom
  demo_shared_native)
 (preprocess
  (pps server-reason-react.ppx)))

(rule
 (alias bench)
 (action
  (run ./bench.exe)))

(rule
 (alias bench-json)
 (action
  (with-stdout-to
   bench_results.json
   (run ./bench.exe --json))))
