(install
 (enabled_if
  (= %{profile} "dev"))
 (section bin)
 (files
  (node_modules/esbuild/bin/esbuild as esbuild)))

(data_only_dirs node_modules)

(rule
 (alias demo)
 (deps
  server/server.exe
  ; needed to produce .cmt so merlin/ocamllsp works correctly
  (alias_rec server/check))
 (action
  ; we want dune to write the file but not attach any fsevents listeners to it,
  ; so that watchexec can read from it without issues.
  ; this means no (target), no (with-stdout-to), just a bash command with stdout
  ; redirect inside a string
  (bash "date > %{project_root}/../../demo/.running/built_at.txt")))
