(documentation
 (package server-reason-react)
 (mld_files
  index
  get-started
  universal-code
  how-to-organise-universal-code
  browser_ppx
  externals-melange-attributes
  ssr-and-hydration))

(install
 (section doc)
 (files
  (ssr-hydrate-issue.png as odoc-pages/ssr-hydrate-issue.png)
  (ssr-no-hydrate-issue.png as odoc-pages/ssr-no-hydrate-issue.png))
 (package server-reason-react))
