(documentation
 (package server-reason-react)
 (mld_files
  index
  get-started
  universal-code
  how-to-organise-universal-code
  browser_ppx
  externals-melange-attributes
  ssr-and-hydration))

(install
 (section doc)
 (files
  (ssr-and-hydration-pipeline.svg
   as
   odoc-pages/ssr-and-hydration-pipeline.svg)
  (ssr-and-hydration-pipeline-fixed.svg
   as
   odoc-pages/ssr-and-hydration-pipeline-fixed.svg))
 (package server-reason-react))
