; We want to keep the exact interface from ReasonReact
; This layout of server-reason-react.react isn't ideal. Since bsconfig exposes
; every file as module, similarly on what (wrapped false) does.
; We didn't use wrapped false since it will be all under a "React" namespace
; and it's not the same as bs.
; Current solution is to export all libs manually

(library
 (name react)
 (modules react)
 (modes melange best)
 (public_name server-reason-react.react)
 (libraries shims server-reason-react.js domProps reactEvent))

(library
 (name reactEvent)
 (modules reactEvent)
 (modes melange best)
 (public_name server-reason-react.reactEvent)
 (libraries server-reason-react.js))

(library
 (name reactDOM)
 (modules reactDOM)
 (modes melange best)
 (public_name server-reason-react.reactDom)
 (libraries react shims server-reason-react.js domProps))

(library
 (name domProps)
 (modules domProps)
 (modes melange best)
 (public_name server-reason-react.domProps))

(library
 (name reasonReactRouter)
 (modules reasonReactRouter)
 (modes melange best)
 (public_name server-reason-react.reasonReactRouter)
 (libraries shims react))

; Not related with react/react-dom

(library
 (name emotion)
 (modules emotion)
 (modes melange best)
 (public_name server-reason-react.emotion)
 (libraries server-reason-react.css str))
