; We want to keep the exact interface from ReasonReact
; This layout of server-reason-react.react isn't ideal. Since bsconfig exposes
; every file as module, similarly on what (wrapped false) does.
; We didn't use wrapped false since it will be all under a "React" namespace
; and it's not the same as bs.
; Current solution is to export all libs manually

(library
 (name react)
 (modules react reactEvent domProps)
 (modes melange best)
 (wrapped false)
 (public_name server-reason-react.react)
 (libraries shims js))

(library
 (name reactDOM)
 (modules reactDOM reactDOMStyle)
 (modes melange best)
 (wrapped false)
 (public_name server-reason-react.reactDom)
 (libraries react shims js))

; Not related with react/react-dom

(library
 (name css)
 (modules css)
 (modes melange best)
 (public_name server-reason-react.css)
 (libraries server-reason-react.bs_css str))
