(env
 (dev
  (flags
   (:standard -w -9))))

(library
 (name native_react_ppx)
 (public_name server-reason-react.ppx)
 (libraries
  compiler-libs.common
  ppxlib
  ppxlib.astlib
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.shims
  server-reason-react.domProps)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_rewriter))
