(env
 (_
  (env-vars
   ("DEMO_ENV" "development"))))

(melange.emit
 (enabled_if
  (= %{profile} dev))
 (target app)
 (module_systems
  (es6 re.js))
 (libraries
  melange
  reason-react
  server-reason-react.react-server-dom-esbuild
  server-reason-react.url_js
  melange.dom
  melange-webapi
  melange-fetch
  demo_shared_js)
 (preprocess
  (pps browser_ppx -js reason-react-ppx melange.ppx)))

(rule
 (enabled_if
  (= %{profile} dev))
 (alias client)
 (deps
  (package server-reason-react)
  (alias_rec melange)
  (:script build.mjs)
  (:entrypoints
   "app/demo/client/Hydrate.re.js"
   "app/demo/client/SinglePageRSC.re.js"
   "app/demo/client/DummyRouterRSC.re.js"
   "app/demo/client/RouterRSC.re.js"
   "app/demo/client/ServerOnlyRSC.re.js"
   "app/demo/client/RouterRSCNoSSR.re.js")
  (source_tree node_modules)
  (file package.json)
  (source_tree ../../packages/esbuild-plugin))
 (action
  (run
   node
   %{script}
   %{entrypoints}
   --output=app/demo/client/
   --extract=true
   --env=%{env:DEMO_ENV='production'})))
