(include_subdirs qualified)

(executable
 (enabled_if
  (= %{profile} "dev"))
 (name server)
 (libraries
  dream
  demo_shared_native
  react
  reactDOM
  html
  js
  lwt.unix
  str
  unix
  belt
  yojson)
 (preprocess
  (pps
   server-reason-react.ppx
   server-reason-react.melange_ppx
   melange-json-native.ppx
   lwt_ppx)))
