(subdir
 src
 (library
  (foreign_stubs
   (language c)
   (names stubs))
  (flags :standard -w -A)
  (name belt)
  (public_name server-reason-react.belt)
  (libraries js)))

(subdir
 test
 (executable
  (name test)
  (modules test)
  (flags :standard -w -32-27-34)
  (libraries server-reason-react.belt server-reason-react.js))
 (rule
  (alias runtest)
  (deps test.ml)
  (action
   (run ./test.exe))))
