(library
 (name css)
 (public_name server-reason-react.css)
 (modules :standard \ hash autoprefixer)
 (modes best melange)
 (libraries hash))

(library
 (name hash)
 (modules hash)
 (public_name server-reason-react.hash)
 (modes best melange))

(library
 (name autoprefixer)
 (modules autoprefixer)
 (public_name server-reason-react.autoprefixer)
 (modes best melange)
 (libraries css))
