(library
 (name jsoo_react_test)
 (modes byte)
 (public_name native-react.test)
 (wrapped false)
 (js_of_ocaml
  (javascript_files ReactDOMTestUtils.js))
 (libraries js_of_ocaml gen_js_api))

(rule
 (targets reactDOMTestUtils.ml)
 (deps reactDOMTestUtils.mli)
 (action
  (run %{bin:gen_js_api} -o %{targets} %{deps})))
