(rule
 (targets reason.actual)
 (deps
  (:pp ../../bin/standalone.exe)
  (:input reason.ml))
 (action
  ; expect the process to fail, capturing stderr
  (with-stderr-to
   %{targets}
   (bash "! ./%{pp} %{input}"))))

(rule
 (targets reason.ml)
 (deps reason.re)
 (action
  (with-stdout-to
   %{targets}
   (run refmt --parse=re --print=ml %{deps}))))

(rule
 (alias runtest)
 (action
  (progn
   (diff reason.expected reason.actual))))
