(executable
 (name main)
 (libraries native-react.ppx ppxlib))

(rule
 (targets reason.result)
 (deps test_reason.ml)
 (action
  (run ./main.exe --impl %{deps} -o %{targets})))

(rule
 (targets test_reason.ml)
 (deps input_reason.re)
 (action
  (with-stdout-to
   %{targets}
   (run refmt --parse=re --print=ml %{deps}))))

(rule
 (alias runtest)
 (action
  (diff reason.expected reason.result)))
