(library
 (name nested_router_js)
 (modes melange)
 (wrapped false)
 (libraries
  reason-react
  server-reason-react.react-server-dom-esbuild
  melange-webapi
  melange.belt
  melange.js
  melange-fetch
  melange.dom
  server-reason-react.url_js
  melange-json
  server-reason-react.runtime)
 (preprocess
  (pps
   browser_ppx
   -js
   server-reason-react.ppx
   -melange
   -shared-folder-prefix=js/
   melange.ppx
   reason-react-ppx
   melange-json.ppx)))

(copy_files
 (files "../native/shared/*.re"))
