(library
 (name nested_router_js)
 (enabled_if
  (= %{profile} dev))
 (modes melange)
 (wrapped false)
 (libraries
  reason-react
  server-reason-react.react-server-dom-esbuild
  melange-webapi
  melange.belt
  melange.js
  melange-fetch
  melange.dom
  server-reason-react.url_js
  server-reason-react.rsc
  server-reason-react.runtime)
 (preprocess
  (pps
   browser_ppx
   -js
   server-reason-react.ppx
   -melange
   -shared-folder-prefix=js/
   server-reason-react.rsc.ppx
   melange.ppx
   reason-react-ppx)))

(copy_files
 (files "../native/shared/*.re"))
