(include_subdirs unqualified)

(library
 (name nested_router_native)
 (wrapped false)
 (flags :standard -w -26-27) ; browser_only removes code from the server, making this warning necessary
 (libraries
  react
  reactDOM
  dream
  js
  server-reason-react.url_native
  melange-json-native
  server-reason-react.runtime
  webapi
  lwt
  server-reason-react.fetch)
 (preprocess
  (pps
   lwt_ppx
   melange_native_ppx
   server-reason-react.ppx
   -shared-folder-prefix=/native/shared/
   server-reason-react.browser_ppx
   melange-json-native.ppx)))
