(include_subdirs unqualified)

(library
 (name shared_native)
 (libraries
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.webapi)
 (preprocess
  (pps melange.ppx server-reason-react.ppx browser_ppx)))

(copy_files# "../*.re")
