(include_subdirs unqualified)

(library
 (name demo_shared_js)
 (modes melange)
 (wrapped false)
 (libraries
  reason-react
  server-reason-react.react-server-dom-esbuild
  melange-webapi
  melange.belt
  melange.js
  melange-fetch
  melange.dom
  server-reason-react.url_js
  melange-json)
 (melange.runtime_deps
  ../../../packages/react-server-dom-esbuild/ReactServerDOMEsbuild.js)
 (preprocess
  (pps
   browser_ppx
   -js
   server-reason-react.ppx
   -melange
   -shared-folder-prefix=js/
   melange.ppx
   reason-react-ppx
   melange-json.ppx)))

(copy_files
 (files "../native/shared/*.re"))

(subdir
 NestedRouterComponents
 (copy_files
  (files "../../native/shared/NestedRouterComponents/*.re")))
