(include_subdirs unqualified)

(library
 (name demo_shared_js)
 (modes melange)
 (wrapped false)
 (libraries
  reason-react
  server-reason-react.react-server-dom-esbuild
  server-reason-react.runtime
  melange-webapi
  melange.belt
  melange.js
  melange-fetch
  melange.dom
  server-reason-react.url_js
  server-reason-react.rsc
  nested_router_js)
 (melange.runtime_deps
  ../../../packages/react-server-dom-esbuild/ReactServerDOMEsbuild.js)
 (preprocess
  (pps
   browser_ppx
   -js
   server-reason-react.ppx
   -melange
   -shared-folder-prefix=js/
   server-reason-react.rsc.ppx
   melange.ppx
   reason-react-ppx)))

(copy_files
 (files "../native/shared/*.re"))
