(include_subdirs unqualified)

(library
 (name demo_shared_native)
 (libraries
  react
  reactDOM
  js
  belt
  dom
  webapi
  melange-fetch
  yojson
  unix
  lwt
  lwt.unix)
 (wrapped false)
 (preprocess
  (pps
   lwt_ppx
   melange_native_ppx
   server_reason_react_ppx
   browser_ppx
   melange-json-native.ppx)))
