(include_subdirs unqualified)

(library
 (name demo_shared_native)
 (flags :standard -w -26-27) ; browser_only removes code form the server, making this warning necessary
 (libraries
  react
  reactDOM
  js
  belt
  dom
  webapi
  melange-fetch
  yojson
  unix
  dream
  url_native
  lwt
  lwt.unix)
 (wrapped false)
 (preprocess
  (pps
   lwt_ppx
   melange_native_ppx
   server-reason-react.ppx
   -shared-folder-prefix=/native/shared
   server-reason-react.browser_ppx
   melange-json-native.ppx)))
