(include_subdirs unqualified)

(library
 (name demo_shared_native)
 (libraries
  react
  reactDOM
  js
  belt
  dom
  webapi
  melange-fetch
  yojson
  unix
  dream
  url_native
  melange-json-native
  server-reason-react.rsc-native
  str
  lwt
  lwt.unix
  nested_router_native
  dream_rsc)
 (wrapped false)
 (preprocess
  (pps
   lwt_ppx
   melange_native_ppx
   server-reason-react.ppx
   -shared-folder-prefix=/native/
   server-reason-react.browser_ppx
   server-reason-react.rsc-native.ppx)))
